[gd_scene load_steps=6 format=3 uid="uid://1f18uo8rfutu"]

[ext_resource type="Script" uid="uid://cd3csptiuwjlc" path="res://scenes/ui/settings_menu/settings_menu.gd" id="1_h0t3o"]
[ext_resource type="Texture2D" uid="uid://dsttt01mbchn7" path="res://assets/UI/main screen.png" id="2_v2onw"]
[ext_resource type="Theme" uid="uid://tit816pj440" path="res://resources/ui/themes/mainmenu/button_theme_main_menu.tres" id="3_wafav"]
[ext_resource type="FontFile" uid="uid://ba8wsyl36d580" path="res://resources/ui/fonts/Quintessential-Regular.ttf" id="4_k0j6j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ying2"]
bg_color = Color(0.0745098, 0.301961, 0.654902, 0.878431)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.109804, 0.027451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 5.0
expand_margin_bottom = 15.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0t3o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v2onw")
expand_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.35
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ying2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.882353, 0.909804, 0.505882, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("4_k0j6j")
theme_override_font_sizes/font_size = 32
text = "Enter nickname:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Oskar"
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("3_wafav")
text = "Return to main menu"

[connection signal="text_changed" from="PanelContainer/VBoxContainer/GridContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
